...
    
}

extension LoginViewController {
    func isValidateForm() -> Bool {
        if self.textFieldUserName.text?.isEmpty ?? true || self.textFieldPassword.text?.isEmpty ?? true {
            self.presentAlert(withTitle: "Missing Credentials", message: "Missing UserName or Password")
            return false
        }
        return true
    }
    
    func isValidUserNameAndPassword() -> Bool {
...
        }
        return true
    }
    
    fileprivate func presentAlert(withTitle title : String, message : String) {
        let alertController = UIAlertController(title: title, message: message, preferredStyle: .alert)
        let alertOkAction = UIAlertAction(title: "OK", style: .default) { (okAction) in
        }
        alertController.addAction(alertOkAction)
        self.present(alertController, animated: true, completion: nil)
    }
}

